--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/queries.css" />
-    <title>foodCook &mdash; Never cook again!</title>
+    <title>foodCook &mdash; Never cook again!😍 </title>
 
     <!-- JS LIBRARIES -->
     <script
